<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name"> TheTagGame</string>
    <string name="title">TheTagGame</string>
    <string name="hiscore">HighScore: </string>
    <string name="play">PLAY </string>
    <string name="score">SCORE: </string>

    <string name="lose">You Lose! </string>
    <string name="gamescore">Score: </string>
    <string name="playagain">Play Again! </string>
    <string name="goBack">Menu </string>
    <string name="menu">Main Menu </string>

    <string name="img1">Image1 </string>
    <string name="img2">Image2 </string>
    <string name="scoreoval"> Image3</string>

    <string name="volume">Volume</string>

    <string name="instructions"> Which Instagram hashtag was used the most?</string>

    <string name="LEADERBOARD_ID">890890783014 </string>

    <string name="app_ID">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_unit_ID">ca-app-pub-2693589185869684/2783661852</string>

</resources>
