<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameActivity">


<!--
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:text="@string/hiscore"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_alignBaseline="@+id/button4"
        android:layout_alignBottom="@+id/button4"
        android:layout_toRightOf="@+id/buttonq2"
        android:layout_toEndOf="@+id/buttonq2"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />
-->

    <Button
        android:id="@+id/buttonq1"
        app:layout_heightPercent="8%"
        app:layout_widthPercent="95%"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_alignTop="@+id/imageView3"
        android:background="@drawable/button_shape"
        android:onClick="buttonClicked"
        android:textColor="@color/yellow"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonq2"
        app:layout_heightPercent="8%"
        app:layout_widthPercent="95%"
        android:layout_alignTop="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_shape"
        android:onClick="buttonClicked"
        android:textColor="@color/yellow"
        android:textSize="15sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/ViewB2"
        android:layout_toRightOf="@+id/ViewB2"
        android:alpha="0.8"
        app:layout_heightPercent="20%"
        android:contentDescription="@string/img1"
        android:scaleType="fitXY"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"

        android:alpha="0.8"
        android:contentDescription="@string/img2"
        android:scaleType="fitXY"

        app:layout_heightPercent="45%"
        app:layout_widthPercent="100%"
        app:srcCompat="@mipmap/ic_launcher" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="100%"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/app_ID" />


    <ImageView
        android:id="@+id/imageView4"
        app:layout_heightPercent="12%"
        app:layout_widthPercent="68%"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:adjustViewBounds="false"
        android:alpha="0.80"
        android:contentDescription="@string/scoreoval"
        android:cropToPadding="false"
        android:src="@drawable/orangeoval" />

    <TextView
        android:text="@string/score"
        android:textStyle="bold"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_below="@+id/buttonq1"
        android:textSize="20sp"
        android:gravity="center"
        android:alpha="1"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/ViewB1"
        android:textColor= "@color/yellow"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ViewB2"
        android:textStyle="bold"
        android:gravity="center"
        android:alpha="1"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonq2"
        android:textColor= "@color/yellow"
        android:layout_marginTop="20dp" />

    <!--
    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textColor="#FFA500"
        android:text="@string/volume"
        android:visibility="visible" />
-->
    <ImageButton
        android:id="@+id/button4"
        app:layout_heightPercent="5%"
        app:layout_widthPercent="12%"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/goBack"
        android:onClick="onMenu"
        android:background="@drawable/home" />

    <ImageButton
        android:id="@+id/volToggle"
        app:layout_heightPercent="5%"
        app:layout_widthPercent="10%"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/volume"
        android:onClick="volToggle"
        android:background="@drawable/volon" />

</android.support.percent.PercentRelativeLayout>

