<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.tektuna.antho.thetaggame.LoseActivity">

    <TextView
        app:layout_heightPercent="4%"
        app:layout_widthPercent="40%"

        android:textSize="20sp"
        android:id="@+id/ScotreCtr"
        android:textAlignment="center"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/youLose"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button2"
        android:background="@drawable/play_button"
        android:onClick="playAgain"
        android:text="@string/play"
        android:textSize="25sp"
        app:layout_heightPercent="13%"
        app:layout_widthPercent="53%"
        android:layout_marginBottom="27dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <!--
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:background="@drawable/button_shape"
        android:onClick="mainMenu"
        android:text="@string/menu"
        android:textSize="25sp" />
-->
    <ImageButton
        android:id="@+id/buttonHome"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="18%"
        android:background="@drawable/home"
        android:contentDescription="@string/menu"
        android:onClick="mainMenu"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp" />

    <ImageButton
        android:id="@+id/youLose"
        app:layout_heightPercent="38%"
        app:layout_widthPercent="100%"
        android:background="@drawable/youlose"
        android:contentDescription="@string/lose"
        android:onClick="mainMenu"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />



</android.support.percent.PercentRelativeLayout>
